--- a/public/admin/themes/default/css/lightwindow.css
+++ b/public/admin/themes/default/css/lightwindow.css
@@ -341,6 +341,8 @@
 		font-weight:bold;
 		padding:2px 10px;
 		display:block !important;
+		min-width: 200px;
+		text-align:center;
 	}
 
 	a#lightwindow_title_bar_close_link,
